fix for overlapping divs

--- a/src/styles/css/global.css
+++ b/src/styles/css/global.css
@@ -112,13 +112,13 @@ body {
 
 .about-container {
   position: relative;
-  height: 70vh; }
+  height: auto; }
 
 .triangle-div {
   height: 90rem;
-  width: 60rem;
+  width: 40rem;
   position: absolute;
-  top: 19rem;
+  top: 10rem;
   right: 0;
   background-image: linear-gradient(to bottom right, #00b3d2, rgba(51, 13, 164, 0.632));
   clip-path: polygon(0 50%, 100% 100%, 100% 0); }
@@ -130,8 +130,7 @@ body {
   grid-template-columns: 1fr 1.5fr;
   grid-template-rows: auto;
   grid-template-areas: "picture aboutText" "skills skills";
-  column-gap: 2rem;
-  z-index: 1; }
+  column-gap: 2rem; }
 
 .profile-pic {
   grid-area: picture;
@@ -183,7 +182,7 @@ body {
   margin-top: 1.5rem; }
 
 .projects-section {
-  height: 50vh; }
+  height: auto; }
 
 .projects-container {
   width: 85%;
@@ -272,7 +271,7 @@ body {
 
 .footer {
   height: 30vh;
-  margin-top: 5rem;
+  margin-top: 8rem;
   background-image: linear-gradient(to top right, #00b3d2, #330da4);
   text-align: center; }
 
